Fix form input misalign in login_form.scss

--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -1,9 +1,7 @@
-.form-title {
-  font-family: sans-serif;
-  // font-size: 75%;
-}
-
-
+// .form-title {
+//   font-family: sans-serif;
+// }
+//
 .session-page {
   font-family: sans-serif;
   background-color: #F3F3F3;
@@ -14,32 +12,50 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  // label {
-  //  padding: 10px;
-  //  display: block;
-  // }
-  button {
-   display: block;
-   padding: 10px;
-   margin: 20px;
-  }
 }
-
+//
 .session-form {
-  height: 300px;
+  // height: 300px;
   width: 300px;
   background: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  // align-items: stretch;
   border: 1px solid rgb(222,222,222);
-  border-radius: 5px
+  border-radius: 5px;
+}
+//
+// .username, .password {
+//   border: 1px solid #cacaca;
+//   color: #3b3b3b;
+//   border-radius: 7px;
+//   font-size: 16px;
+//   box-sizing: border-box;
+//   width:90%;
+//   margin: 10px;
+//
+// }
+// input {
+//   -webkit-appearance: none;
+// }
+input[type=text], input[type=password], input[type=submit] {
+  border: 1px solid #cacaca;
+  color: #3b3b3b;
+  border-radius: 7px;
+  font-size: 16px;
+  box-sizing: border-box;
+  width: 90%;
+  margin: 10px 10px 10px 15px;
+  padding: 10px;
+  background-color: #F3F3F3;
+
 }
 
-.username, .password {
-  border: 1px solid rgb(222,222,222);
-  border-radius: 7px;
-  box-sizing: border-box;
-  font-size: 16px;
-}
+// .submit-button {
+//   padding: 10px;
+//   margin: 10px;
+//   border-radius: 7px;
+//   background-color: #2dbe60;
+//   width: 90%;
+// }
